# treineeeeeee

./: db.sqlite3  manage.py  pyproject.toml
events/: models.py  serializers.py  views.py
events/migrations/: 0001_initial.py  0002_events_user.py
events/templates/: base.html
meetmap/: asgi.py  settings.py  urls.py  wsgi.py
userprofile/: models.py  views.py
userprofile/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_type.py
